--- a/agoltools/templates/base.html
+++ b/agoltools/templates/base.html
@@ -27,6 +27,7 @@
 	</div>
 
     <script src="/js/require-jquery.js"></script>
+    <script src="/js/bootstrap.js"></script>
     <script type="text/javascript">
     	require.config({
     		baseUrl: "/js"
