--- a/agoltools/root/templates/root.html
+++ b/agoltools/root/templates/root.html
@@ -19,6 +19,10 @@
 				<a href="/addfolderservices">Add Folder Services</a>
 				<p class="muted desc">Adds all services from an ArcGIS Server folder into your ArcGIS Online account</p>
 			</li>
+			<li>
+				<a href="/orgusers">Get Organization Users</a> (admin only)
+				<p class="muted desc">Display or download your organization's users</p>
+			</li>
 		</ul>
 	</div>
 </div>
