--- a/agoltools/root/templates/root.html
+++ b/agoltools/root/templates/root.html
@@ -23,6 +23,10 @@
 				<a href="/orgusers">Get Organization Users</a> (admin only)
 				<p class="muted desc">Display or download your organization's users</p>
 			</li>
+			<li>
+				<a href="/myagol">My ArcGIS Online Information</a>
+				<p class="muted desc">Displays your ArcGIS Online information</p>
+			</li>
 		</ul>
 	</div>
 </div>
