--- a/static/css/agoltools.css
+++ b/static/css/agoltools.css
@@ -13,6 +13,16 @@ body {
 	border-radius: 4px;
 }
 
+.agoltools-img {
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	border: 1px solid #eee;
+	-webkit-box-shadow: 0 0 8px #444;
+	-moz-box-shadow: 0 0 8px #444;
+	box-shadow: 0 0 8px #444;
+}
+
 .focus {
 	font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
 	color: #444;	
