--- a/agoltools/misc/templates/about.html
+++ b/agoltools/misc/templates/about.html
@@ -11,7 +11,7 @@
 <div class="row-fluid">
 	<div class="span12 box-rounded agoltools">
 		<p>
-			ArcGIS Online is a collection of tools for your 
+			ArcGIS Online Tools is a collection of tools for your 
 			<a href="https:/www.arcgis.com">ArcGIS Online</a> account.
 		</p>
 		<p>
