my content in my agol

--- a/agoltools/myagol/templates/getmyagol.html
+++ b/agoltools/myagol/templates/getmyagol.html
@@ -55,7 +55,7 @@
 				This tool displays your ArcGIS Online information on a single web page.
 			</p> 
 			<p>
-				Information includes your profile, your organization and your groups.
+				Information includes your profile, content, groups, organization and subscription.
 			</p>
 		</div>
 
