--- a/agoltools/root/templates/root.html
+++ b/agoltools/root/templates/root.html
@@ -16,16 +16,16 @@
 	<div class="span12 agoltools">
 		<ul>
 			<li>
+				<a href="/myagol">My ArcGIS Online Information</a>
+				<p class="muted desc">Displays your ArcGIS Online information (profile, content, groups, organization and subscription info)</p>
+			</li>
+			<li>
 				<a href="/addfolderservices">Add Folder Services</a>
 				<p class="muted desc">Adds all services from an ArcGIS Server folder into your ArcGIS Online account</p>
 			</li>
 			<li>
 				<a href="/orgusers">Get Organization Users</a> (admin only)
 				<p class="muted desc">Display or download your organization's users</p>
-			</li>
-			<li>
-				<a href="/myagol">My ArcGIS Online Information</a>
-				<p class="muted desc">Displays your ArcGIS Online information</p>
 			</li>
 		</ul>
 	</div>
