search web maps referencing url

--- a/agoltools/myagol/templates/getmyagol.html
+++ b/agoltools/myagol/templates/getmyagol.html
@@ -57,6 +57,9 @@
 			<p>
 				Information includes your profile, content, groups, organization and subscription.
 			</p>
+			<p>
+				Note that depending on the number of users in your organization it may take a few seconds to execute.
+			</p>
 		</div>
 
 	</div>
