--- a/agoltools/root/templates/root.html
+++ b/agoltools/root/templates/root.html
@@ -27,6 +27,10 @@
 				<a href="/orgusers">Get Organization Users</a> (admin only)
 				<p class="muted desc">Display or download your organization's users</p>
 			</li>
+			<li>
+				<a href="/webmapurls">Get Web Maps With URL</a>
+				<p class="muted desc">Search Web Maps that reference a specified service URL</p>
+			</li>
 		</ul>
 	</div>
 </div>
