find web maps referencing a URL in org

--- a/agoltools/root/templates/root.html
+++ b/agoltools/root/templates/root.html
@@ -28,8 +28,8 @@
 				<p class="muted desc">Display or download your organization's users</p>
 			</li>
 			<li>
-				<a href="/webmapurls">Get Web Maps With URL</a>
-				<p class="muted desc">Search Web Maps that reference a specified service URL</p>
+				<a href="/webmapurls">Find Web Maps With URL</a>
+				<p class="muted desc">Find Web Maps that reference a specified service URL</p>
 			</li>
 		</ul>
 	</div>
