--- a/agoltools/webmapurls/templates/webmapurls.html
+++ b/agoltools/webmapurls/templates/webmapurls.html
@@ -80,7 +80,7 @@
 								<div class="span9 item-details">
 									<div>
 										<a href="{{$itemUrl}}">{{.Title}}</a> 
-										({{.Type}})
+										(<span class="meta">by</span> {{.Owner}})
 									</div>
 									<div>{{.Snippet}}</div>
 									{{with .Tags}}
