download web maps as csv

--- a/agoltools/orgusers/templates/getorgusers.html
+++ b/agoltools/orgusers/templates/getorgusers.html
@@ -26,7 +26,7 @@
 				<div class="controls">
 					<label class="radio">
 						<input type="radio" name="f" id="fhtml" value="html" checked="checked"/>
-						Display Users on a Web Page
+						View Users on a Web Page
 					</label>
 					<label class="radio">
 						<input type="radio" name="f" id="fcsv" value="csv"/>
