--- a/agoltools/root/templates/root.html
+++ b/agoltools/root/templates/root.html
@@ -25,11 +25,11 @@
 			</li>
 			<li>
 				<a href="/orgusers">Get Organization Users</a> (admin only)
-				<p class="muted desc">Display or download your organization's users</p>
+				<p class="muted desc">View or download your organization's users</p>
 			</li>
 			<li>
 				<a href="/webmapurls">Find Web Maps With URL</a>
-				<p class="muted desc">Find Web Maps that reference a specified service URL</p>
+				<p class="muted desc">Find Web Maps that reference a specified service URL. View or download details of the web maps found</p>
 			</li>
 		</ul>
 	</div>
