--- a/agoltools/root/templates/root.html
+++ b/agoltools/root/templates/root.html
@@ -31,6 +31,10 @@
 				<a href="/webmapurls">Find Web Maps With URL</a>
 				<p class="muted desc">Find Web Maps that reference a specified service URL. View or download details of the web maps found</p>
 			</li>
+			<li>
+				<a href="/registeredapps">My Registered Apps</a>
+				<p class="muted desc">View or download information on all your registered apps</p>
+			</li>
 		</ul>
 	</div>
 </div>
