user login stats for registered apps

--- a/agoltools/root/templates/root.html
+++ b/agoltools/root/templates/root.html
@@ -35,6 +35,10 @@
 				<a href="/registeredapps">My Registered Apps</a>
 				<p class="muted desc">View or download information on all your registered apps</p>
 			</li>
+			<li>
+				<a href="/registeredappsloginstats">My Registered Apps Login Stats</a>
+				<p class="muted desc">View or download login information on all your registered apps</p>
+			</li>
 		</ul>
 	</div>
 </div>
