option to view login stats for yesterday

--- a/agoltools/registeredappsloginstats/templates/getregisteredappsloginstats.html
+++ b/agoltools/registeredappsloginstats/templates/getregisteredappsloginstats.html
@@ -51,6 +51,10 @@
 						Today
 					</label>
 					<label class="radio">
+						<input type="radio" name="period" value="y"/>
+						Yesterday
+					</label>
+					<label class="radio">
 						<input type="radio" name="period" value="w"/>
 						Last Week
 					</label>
