show app id in login stats

--- a/agoltools/registeredappsloginstats/templates/registeredappsloginstats.html
+++ b/agoltools/registeredappsloginstats/templates/registeredappsloginstats.html
@@ -98,7 +98,7 @@ th.headerSortUp {
 							<tbody>
 								{{range .}}
 									<tr>
-										<td>{{.Title}}</td>
+										<td>{{.Title}} <span class="muted">({{.Client_Id}})</span></td>										
 										<td>{{.Data | len}}</td>
 										<td>{{.NumLogins}}</td>
 										<td>{{.NumOrgs}}</td>
